--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@braintree/sanitize-url": "^3.1.0",
     "crypto-random-string": "^3.0.1",
     "d3": "^5.7.0",
-    "dagre": "^0.8.4",
-    "dagre-d3": "^0.6.4",
+    "dagre": "larturus/dagre",
+    "dagre-d3": "larturus/dagre-d3",
     "graphlib": "^2.1.7",
     "he": "^1.2.0",
     "lodash": "^4.17.11",
